# ENCRYPTIX

./: README.md
Task 1/: NUMBER_GUESSING_GAME.cpp
Task 2/: Question.txt  calculator.cpp
Task 3/: Question.txt  tick_tack_toc.cpp
Task 4/: Question.txt  To-DO-LIST.cpp
Task 5/: CMakeLists.txt  image_processing.cpp  question .text
